--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
   <div class="card-component">
 
   <header>
-      <img src="images/image-product-mobile.jpg" class="unres">
-      <img src="images/image-product-desktop.jpg" class="respon-img"> 
+      <img src="images/image-product-mobile.jpg" alt="perfume product preview mobile" class="unres">
+      <img src="images/image-product-desktop.jpg" alt="perfume product preview desktop" class="respon-img"> 
   </header>
       
 
@@ -38,7 +38,7 @@
     </div>
 
     <div class="btn">
-      <img src="images/icon-cart.svg">
+      <img src="images/icon-cart.svg" alt="shopping cart icon">
       <button>Add to Cart</button>
     </div>
 
